--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   },
@@ -48,6 +49,7 @@
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/socket.io-client": "^1.4.36",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "tailwindcss": "^4",
